crates/server-less/tests/fixtures/typo_suggestion_param.stderr
error: unknown attribute `hlep` — did you mean `help`?

       Valid attributes: name, default, query, path, body, header, short, help, positional, env, file_key, nested, serde, env_prefix

       Examples:
       - #[param(name = "q")]
       - #[param(default = 10)]
       - #[param(query)]
       - #[param(header, name = "X-API-Key")]
       - #[param(short = 'v')]
       - #[param(help = "Enable verbose output")]
       - #[param(positional)]
       - #[param(env = "MY_VAR")]
       - #[param(file_key = "database.host")]
       - #[param(nested)]
       - #[param(nested, serde)]
       - #[param(nested, env_prefix = "SEARCH")]
 --> tests/fixtures/typo_suggestion_param.rs:9:33
  |
9 |     pub fn hello(&self, #[param(hlep = "A greeting")] name: String) -> String {
  |                                 ^^^^
